# profitdog-demos

./: README.md  entitlement_patterns.py  paywall_implementation.swift  revenuecat_quickstart.py  subscription_analytics.py  useRevenueCat.ts  webhook_handler.py
aha-moment-paywall/: AhaMomentPaywallApp.swift  AhaMomentPaywallView.swift  ContentView.swift  LessonView.swift  PaywallManager.swift  README.md
android-purchases-helper/: README.md  RevenueCatHelper.kt
express-webhook-handler/: README.md  package.json  webhook-server.ts
fastapi-purchase-validator/: README.md  main.py  requirements.txt
flutter-subscription-state/: README.md  subscription_gate.dart  subscription_provider.dart  subscription_state.dart
go-webhook-handler/: README.md  main.go
kotlin-paywall/: PaywallScreen.kt  PaywallState.kt  PaywallViewModel.kt  README.md
python/: README.md  entitlement_checker.py
rails-webhook-handler/: README.md  billing_issue_job.rb  process_subscription_job.rb  revenuecat_webhooks_controller.rb
react-analytics-dashboard/: README.md  SubscriptionDashboard.tsx
react-native-subscription-manager/: PaywallGate.tsx  README.md  SubscriptionProvider.tsx  hooks.ts  index.ts  types.ts
rust-entitlement-checker/: Cargo.toml  README.md
rust-entitlement-checker/src/: lib.rs  main.rs
webhook-handler/: README.md  main.py
webhook-handler-nodejs/: README.md  index.js  package.json
