[package]
name = "revenuecat-entitlements"
version = "0.1.0"
edition = "2021"
description = "Server-side entitlement checking for RevenueCat in Rust"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
